[tool.poetry]
name = "test_fastapi"
version = "0.1.0"
description = "Test app with fastapi."
authors = ["Hound672 <hound672@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.45.0"
uvicorn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
